package io.github.mosser.arduinoml.ens.model;


public interface NamedElement {

	public void setName(String name);
	public String getName();

}
