package ArduinoML.structure;

/*Generated by MPS */

import java.util.List;
import jetbrains.mps.internal.collections.runtime.ListSequence;
import java.util.LinkedList;

public enum SIGNAL {
  HIGH("high", "HIGH"),
  LOW("low", "LOW");

  private final String myName;
  public String getName() {
    return myName;
  }
  private final String myValue;
  private SIGNAL(String name, String value) {
    myName = name;
    myValue = value;
  }
  public String getValue() {
    return myValue;
  }
  public String getValueAsString() {
    return myValue;
  }
  public static List<SIGNAL> getConstants() {
    List<SIGNAL> list = ListSequence.fromList(new LinkedList<SIGNAL>());
    ListSequence.fromList(list).addElement(SIGNAL.HIGH);
    ListSequence.fromList(list).addElement(SIGNAL.LOW);
    return list;
  }
  public static SIGNAL getDefault() {
    return SIGNAL.HIGH;
  }
  public static SIGNAL parseValue(String value) {
    if (value == null) {
      return SIGNAL.getDefault();
    }
    if (value.equals(SIGNAL.HIGH.getValueAsString())) {
      return SIGNAL.HIGH;
    }
    if (value.equals(SIGNAL.LOW.getValueAsString())) {
      return SIGNAL.LOW;
    }
    return SIGNAL.getDefault();
  }
}
